// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Audit Setup > Contests renders empty opportunistic state correctly 1`] = `
<div>
  <form
    data-testid="form-one"
  >
    <div
      class="sc-bwzfXH jFbAHP"
    >
      <h2
        class="bp3-heading sc-bdVaJa ibVpPq"
      >
        Opportunistic Contests
      </h2>
      <div
        class="bp3-card bp3-elevation-2 sc-kgoBCf cGUESD"
      >
        <div
          class="sc-htpNat hKxttc"
        >
          <h5
            class="bp3-heading"
          >
            Contest  Info
          </h5>
          <br />
          <div>
            <div
              class="sc-bxivhb fbVQhV"
            >
              Enter the name of the contest that will drive the audit.
            </div>
            <label
              for="contests[0].name"
            >
              Contest
               
              
               Name
              <div
                class="sc-ifAKCX eNyQfb"
              >
                <div
                  class="bp3-input-group sc-EHOje bzcNaj"
                >
                  <input
                    class="bp3-input"
                    id="contests[0].name"
                    name="contests[0].name"
                    style="padding-right: 10px;"
                    value=""
                  />
                </div>
              </div>
            </label>
          </div>
          <div
            class="sc-bxivhb fbVQhV"
          >
            Enter the number of winners for the contest.
          </div>
          <label
            for="contests[0].numWinners"
          >
            Winners
            <div
              class="sc-ifAKCX eNyQfb"
            >
              <div
                class="bp3-input-group sc-EHOje bzcNaj"
              >
                <input
                  class="bp3-input"
                  id="contests[0].numWinners"
                  name="contests[0].numWinners"
                  style="padding-right: 10px;"
                  value="1"
                />
              </div>
            </div>
          </label>
          <div
            class="sc-bxivhb fbVQhV"
          >
            Number of selections the voter can make in the contest.
          </div>
          <label
            for="contests[0].votesAllowed"
          >
            Votes Allowed
            <div
              class="sc-ifAKCX eNyQfb"
            >
              <div
                class="bp3-input-group sc-EHOje bzcNaj"
              >
                <input
                  class="bp3-input"
                  id="contests[0].votesAllowed"
                  name="contests[0].votesAllowed"
                  style="padding-right: 10px;"
                  value="1"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="sc-htpNat hKxttc"
        >
          <h5
            class="bp3-heading"
          >
            Candidates/Choices & Vote Totals
          </h5>
          <div
            class="sc-bxivhb fbVQhV"
          >
            Enter the name of each candidate choice that appears on the ballot for this contest.
          </div>
          <div
            class="sc-iwsKbI lkODvP"
          >
            <div
              class="sc-gZMcBi cKoNuO"
            >
              <label
                class="bp3-label sc-VigVT hUBjjB"
              >
                Name of Candidate/Choice 
                1
                <div
                  class="sc-gqjmRU crDldu sc-ifAKCX eNyQfb"
                >
                  <div
                    class="bp3-input-group sc-EHOje bzcNaj"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[0].name"
                      style="padding-right: 10px;"
                      value=""
                    />
                  </div>
                </div>
              </label>
              <label
                class="bp3-label sc-VigVT hUBjjB"
              >
                Votes for Candidate/Choice 
                1
                <div
                  class="sc-gqjmRU crDldu sc-ifAKCX eNyQfb"
                >
                  <div
                    class="bp3-input-group sc-EHOje bzcNaj"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[0].numVotes"
                      style="padding-right: 10px;"
                      value=""
                    />
                  </div>
                </div>
              </label>
            </div>
            <div
              class="sc-gZMcBi cKoNuO"
            >
              <label
                class="bp3-label sc-VigVT hUBjjB"
              >
                Name of Candidate/Choice 
                2
                <div
                  class="sc-gqjmRU crDldu sc-ifAKCX eNyQfb"
                >
                  <div
                    class="bp3-input-group sc-EHOje bzcNaj"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[1].name"
                      style="padding-right: 10px;"
                      value=""
                    />
                  </div>
                </div>
              </label>
              <label
                class="bp3-label sc-VigVT hUBjjB"
              >
                Votes for Candidate/Choice 
                2
                <div
                  class="sc-gqjmRU crDldu sc-ifAKCX eNyQfb"
                >
                  <div
                    class="bp3-input-group sc-EHOje bzcNaj"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[1].numVotes"
                      style="padding-right: 10px;"
                      value=""
                    />
                  </div>
                </div>
              </label>
            </div>
            <p
              class="sc-jTzLTM DJcIy"
            >
              Add a new candidate/choice
            </p>
          </div>
        </div>
        <div
          class="sc-htpNat hKxttc"
        >
          <h5
            class="bp3-heading"
          >
            Total Ballots Cast
          </h5>
          <div
            class="sc-bxivhb fbVQhV"
          >
            Enter the overall number of ballot cards cast in jurisdictions containing this contest.
          </div>
          <label
            for="contests[0].totalBallotsCast"
          >
            Total Ballots for Contest
             
            
            <div
              class="sc-ifAKCX eNyQfb"
            >
              <div
                class="bp3-input-group sc-EHOje bzcNaj"
              >
                <input
                  class="bp3-input"
                  id="contests[0].totalBallotsCast"
                  name="contests[0].totalBallotsCast"
                  style="padding-right: 10px;"
                  value=""
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="sc-htpNat hKxttc"
        >
          <h5
            class="bp3-heading"
          >
            Contest Universe
          </h5>
          <div
            class="sc-bxivhb fbVQhV"
          >
            Select the jurisdictions where this contest appeared on the ballot.
          </div>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button sc-kAzzGY icCzNQ"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Select Jurisdictions
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
      <div
        class="sc-fjdhpX ljTFuz"
      >
        <button
          class="bp3-button sc-kAzzGY icCzNQ"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Add another 
            opportunistic
             
            contest
          </span>
        </button>
      </div>
    </div>
    <div
      class="sc-fjdhpX ljTFuz"
    >
      <button
        class="bp3-button sc-kAzzGY icCzNQ"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          Back
        </span>
      </button>
      <button
        class="bp3-button bp3-intent-primary sc-kAzzGY icCzNQ"
        type="submit"
      >
        <span
          class="bp3-button-text"
        >
          Save & Next
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`Audit Setup > Contests renders empty targeted state correctly 1`] = `
<div>
  <form
    data-testid="form-one"
  >
    <div
      class="sc-bwzfXH jFbAHP"
    >
      <h2
        class="bp3-heading sc-bdVaJa ibVpPq"
      >
        Target Contests
      </h2>
      <div
        class="bp3-card bp3-elevation-2 sc-kgoBCf cGUESD"
      >
        <div
          class="sc-htpNat hKxttc"
        >
          <h5
            class="bp3-heading"
          >
            Contest  Info
          </h5>
          <br />
          <div>
            <div
              class="sc-bxivhb fbVQhV"
            >
              Enter the name of the contest that will drive the audit.
            </div>
            <label
              for="contests[0].name"
            >
              Contest
               
              
               Name
              <div
                class="sc-ifAKCX eNyQfb"
              >
                <div
                  class="bp3-input-group sc-EHOje bzcNaj"
                >
                  <input
                    class="bp3-input"
                    id="contests[0].name"
                    name="contests[0].name"
                    style="padding-right: 10px;"
                    value=""
                  />
                </div>
              </div>
            </label>
          </div>
          <div
            class="sc-bxivhb fbVQhV"
          >
            Enter the number of winners for the contest.
          </div>
          <label
            for="contests[0].numWinners"
          >
            Winners
            <div
              class="sc-ifAKCX eNyQfb"
            >
              <div
                class="bp3-input-group sc-EHOje bzcNaj"
              >
                <input
                  class="bp3-input"
                  id="contests[0].numWinners"
                  name="contests[0].numWinners"
                  style="padding-right: 10px;"
                  value="1"
                />
              </div>
            </div>
          </label>
          <div
            class="sc-bxivhb fbVQhV"
          >
            Number of selections the voter can make in the contest.
          </div>
          <label
            for="contests[0].votesAllowed"
          >
            Votes Allowed
            <div
              class="sc-ifAKCX eNyQfb"
            >
              <div
                class="bp3-input-group sc-EHOje bzcNaj"
              >
                <input
                  class="bp3-input"
                  id="contests[0].votesAllowed"
                  name="contests[0].votesAllowed"
                  style="padding-right: 10px;"
                  value="1"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="sc-htpNat hKxttc"
        >
          <h5
            class="bp3-heading"
          >
            Candidates/Choices & Vote Totals
          </h5>
          <div
            class="sc-bxivhb fbVQhV"
          >
            Enter the name of each candidate choice that appears on the ballot for this contest.
          </div>
          <div
            class="sc-iwsKbI lkODvP"
          >
            <div
              class="sc-gZMcBi cKoNuO"
            >
              <label
                class="bp3-label sc-VigVT hUBjjB"
              >
                Name of Candidate/Choice 
                1
                <div
                  class="sc-gqjmRU crDldu sc-ifAKCX eNyQfb"
                >
                  <div
                    class="bp3-input-group sc-EHOje bzcNaj"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[0].name"
                      style="padding-right: 10px;"
                      value=""
                    />
                  </div>
                </div>
              </label>
              <label
                class="bp3-label sc-VigVT hUBjjB"
              >
                Votes for Candidate/Choice 
                1
                <div
                  class="sc-gqjmRU crDldu sc-ifAKCX eNyQfb"
                >
                  <div
                    class="bp3-input-group sc-EHOje bzcNaj"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[0].numVotes"
                      style="padding-right: 10px;"
                      value=""
                    />
                  </div>
                </div>
              </label>
            </div>
            <div
              class="sc-gZMcBi cKoNuO"
            >
              <label
                class="bp3-label sc-VigVT hUBjjB"
              >
                Name of Candidate/Choice 
                2
                <div
                  class="sc-gqjmRU crDldu sc-ifAKCX eNyQfb"
                >
                  <div
                    class="bp3-input-group sc-EHOje bzcNaj"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[1].name"
                      style="padding-right: 10px;"
                      value=""
                    />
                  </div>
                </div>
              </label>
              <label
                class="bp3-label sc-VigVT hUBjjB"
              >
                Votes for Candidate/Choice 
                2
                <div
                  class="sc-gqjmRU crDldu sc-ifAKCX eNyQfb"
                >
                  <div
                    class="bp3-input-group sc-EHOje bzcNaj"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[1].numVotes"
                      style="padding-right: 10px;"
                      value=""
                    />
                  </div>
                </div>
              </label>
            </div>
            <p
              class="sc-jTzLTM DJcIy"
            >
              Add a new candidate/choice
            </p>
          </div>
        </div>
        <div
          class="sc-htpNat hKxttc"
        >
          <h5
            class="bp3-heading"
          >
            Total Ballots Cast
          </h5>
          <div
            class="sc-bxivhb fbVQhV"
          >
            Enter the overall number of ballot cards cast in jurisdictions containing this contest.
          </div>
          <label
            for="contests[0].totalBallotsCast"
          >
            Total Ballots for Contest
             
            
            <div
              class="sc-ifAKCX eNyQfb"
            >
              <div
                class="bp3-input-group sc-EHOje bzcNaj"
              >
                <input
                  class="bp3-input"
                  id="contests[0].totalBallotsCast"
                  name="contests[0].totalBallotsCast"
                  style="padding-right: 10px;"
                  value=""
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="sc-htpNat hKxttc"
        >
          <h5
            class="bp3-heading"
          >
            Contest Universe
          </h5>
          <div
            class="sc-bxivhb fbVQhV"
          >
            Select the jurisdictions where this contest appeared on the ballot.
          </div>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button sc-kAzzGY icCzNQ"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Select Jurisdictions
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
      <div
        class="sc-fjdhpX ljTFuz"
      >
        <button
          class="bp3-button sc-kAzzGY icCzNQ"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Add another 
            targeted
             
            contest
          </span>
        </button>
      </div>
    </div>
    <div
      class="sc-fjdhpX ljTFuz"
    >
      <button
        class="bp3-button sc-kAzzGY icCzNQ"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          Back
        </span>
      </button>
      <button
        class="bp3-button bp3-intent-primary sc-kAzzGY icCzNQ"
        type="submit"
      >
        <span
          class="bp3-button-text"
        >
          Save & Next
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`Audit Setup > Contests renders filled opportunistic state correctly 1`] = `
<div>
  <form
    data-testid="form-one"
  >
    <div
      class="sc-bwzfXH jFbAHP"
    >
      <h2
        class="bp3-heading sc-bdVaJa ibVpPq"
      >
        Opportunistic Contests
      </h2>
      <div
        class="bp3-card bp3-elevation-2 sc-kgoBCf cGUESD"
      >
        <div
          class="sc-htpNat hKxttc"
        >
          <h5
            class="bp3-heading"
          >
            Contest  Info
          </h5>
          <br />
          <div>
            <div
              class="sc-bxivhb fbVQhV"
            >
              Enter the name of the contest that will drive the audit.
            </div>
            <label
              for="contests[0].name"
            >
              Contest
               
              
               Name
              <div
                class="sc-ifAKCX eNyQfb"
              >
                <div
                  class="bp3-input-group sc-EHOje bzcNaj"
                >
                  <input
                    class="bp3-input"
                    id="contests[0].name"
                    name="contests[0].name"
                    style="padding-right: 10px;"
                    value="Contest Name"
                  />
                </div>
              </div>
            </label>
          </div>
          <div
            class="sc-bxivhb fbVQhV"
          >
            Enter the number of winners for the contest.
          </div>
          <label
            for="contests[0].numWinners"
          >
            Winners
            <div
              class="sc-ifAKCX eNyQfb"
            >
              <div
                class="bp3-input-group sc-EHOje bzcNaj"
              >
                <input
                  class="bp3-input"
                  id="contests[0].numWinners"
                  name="contests[0].numWinners"
                  style="padding-right: 10px;"
                  value="1"
                />
              </div>
            </div>
          </label>
          <div
            class="sc-bxivhb fbVQhV"
          >
            Number of selections the voter can make in the contest.
          </div>
          <label
            for="contests[0].votesAllowed"
          >
            Votes Allowed
            <div
              class="sc-ifAKCX eNyQfb"
            >
              <div
                class="bp3-input-group sc-EHOje bzcNaj"
              >
                <input
                  class="bp3-input"
                  id="contests[0].votesAllowed"
                  name="contests[0].votesAllowed"
                  style="padding-right: 10px;"
                  value="1"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="sc-htpNat hKxttc"
        >
          <h5
            class="bp3-heading"
          >
            Candidates/Choices & Vote Totals
          </h5>
          <div
            class="sc-bxivhb fbVQhV"
          >
            Enter the name of each candidate choice that appears on the ballot for this contest.
          </div>
          <div
            class="sc-iwsKbI lkODvP"
          >
            <div
              class="sc-gZMcBi cKoNuO"
            >
              <label
                class="bp3-label sc-VigVT hUBjjB"
              >
                Name of Candidate/Choice 
                1
                <div
                  class="sc-gqjmRU crDldu sc-ifAKCX eNyQfb"
                >
                  <div
                    class="bp3-input-group sc-EHOje bzcNaj"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[0].name"
                      style="padding-right: 10px;"
                      value="Choice Three"
                    />
                  </div>
                </div>
              </label>
              <label
                class="bp3-label sc-VigVT hUBjjB"
              >
                Votes for Candidate/Choice 
                1
                <div
                  class="sc-gqjmRU crDldu sc-ifAKCX eNyQfb"
                >
                  <div
                    class="bp3-input-group sc-EHOje bzcNaj"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[0].numVotes"
                      style="padding-right: 10px;"
                      value="10"
                    />
                  </div>
                </div>
              </label>
            </div>
            <div
              class="sc-gZMcBi cKoNuO"
            >
              <label
                class="bp3-label sc-VigVT hUBjjB"
              >
                Name of Candidate/Choice 
                2
                <div
                  class="sc-gqjmRU crDldu sc-ifAKCX eNyQfb"
                >
                  <div
                    class="bp3-input-group sc-EHOje bzcNaj"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[1].name"
                      style="padding-right: 10px;"
                      value="Choice Four"
                    />
                  </div>
                </div>
              </label>
              <label
                class="bp3-label sc-VigVT hUBjjB"
              >
                Votes for Candidate/Choice 
                2
                <div
                  class="sc-gqjmRU crDldu sc-ifAKCX eNyQfb"
                >
                  <div
                    class="bp3-input-group sc-EHOje bzcNaj"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[1].numVotes"
                      style="padding-right: 10px;"
                      value="20"
                    />
                  </div>
                </div>
              </label>
            </div>
            <p
              class="sc-jTzLTM DJcIy"
            >
              Add a new candidate/choice
            </p>
          </div>
        </div>
        <div
          class="sc-htpNat hKxttc"
        >
          <h5
            class="bp3-heading"
          >
            Total Ballots Cast
          </h5>
          <div
            class="sc-bxivhb fbVQhV"
          >
            Enter the overall number of ballot cards cast in jurisdictions containing this contest.
          </div>
          <label
            for="contests[0].totalBallotsCast"
          >
            Total Ballots for Contest
             
            
            <div
              class="sc-ifAKCX eNyQfb"
            >
              <div
                class="bp3-input-group sc-EHOje bzcNaj"
              >
                <input
                  class="bp3-input"
                  id="contests[0].totalBallotsCast"
                  name="contests[0].totalBallotsCast"
                  style="padding-right: 10px;"
                  value="30"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="sc-htpNat hKxttc"
        >
          <h5
            class="bp3-heading"
          >
            Contest Universe
          </h5>
          <div
            class="sc-bxivhb fbVQhV"
          >
            Select the jurisdictions where this contest appeared on the ballot.
          </div>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button sc-kAzzGY icCzNQ"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Select Jurisdictions
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
      <div
        class="sc-fjdhpX ljTFuz"
      >
        <button
          class="bp3-button sc-kAzzGY icCzNQ"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Add another 
            opportunistic
             
            contest
          </span>
        </button>
      </div>
    </div>
    <div
      class="sc-fjdhpX ljTFuz"
    >
      <button
        class="bp3-button sc-kAzzGY icCzNQ"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          Back
        </span>
      </button>
      <button
        class="bp3-button bp3-intent-primary sc-kAzzGY icCzNQ"
        type="submit"
      >
        <span
          class="bp3-button-text"
        >
          Save & Next
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`Audit Setup > Contests renders filled targeted state correctly 1`] = `
<div>
  <form
    data-testid="form-one"
  >
    <div
      class="sc-bwzfXH jFbAHP"
    >
      <h2
        class="bp3-heading sc-bdVaJa ibVpPq"
      >
        Target Contests
      </h2>
      <div
        class="bp3-card bp3-elevation-2 sc-kgoBCf cGUESD"
      >
        <div
          class="sc-htpNat hKxttc"
        >
          <h5
            class="bp3-heading"
          >
            Contest  Info
          </h5>
          <br />
          <div>
            <div
              class="sc-bxivhb fbVQhV"
            >
              Enter the name of the contest that will drive the audit.
            </div>
            <label
              for="contests[0].name"
            >
              Contest
               
              
               Name
              <div
                class="sc-ifAKCX eNyQfb"
              >
                <div
                  class="bp3-input-group sc-EHOje bzcNaj"
                >
                  <input
                    class="bp3-input"
                    id="contests[0].name"
                    name="contests[0].name"
                    style="padding-right: 10px;"
                    value="Contest Name"
                  />
                </div>
              </div>
            </label>
          </div>
          <div
            class="sc-bxivhb fbVQhV"
          >
            Enter the number of winners for the contest.
          </div>
          <label
            for="contests[0].numWinners"
          >
            Winners
            <div
              class="sc-ifAKCX eNyQfb"
            >
              <div
                class="bp3-input-group sc-EHOje bzcNaj"
              >
                <input
                  class="bp3-input"
                  id="contests[0].numWinners"
                  name="contests[0].numWinners"
                  style="padding-right: 10px;"
                  value="1"
                />
              </div>
            </div>
          </label>
          <div
            class="sc-bxivhb fbVQhV"
          >
            Number of selections the voter can make in the contest.
          </div>
          <label
            for="contests[0].votesAllowed"
          >
            Votes Allowed
            <div
              class="sc-ifAKCX eNyQfb"
            >
              <div
                class="bp3-input-group sc-EHOje bzcNaj"
              >
                <input
                  class="bp3-input"
                  id="contests[0].votesAllowed"
                  name="contests[0].votesAllowed"
                  style="padding-right: 10px;"
                  value="1"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="sc-htpNat hKxttc"
        >
          <h5
            class="bp3-heading"
          >
            Candidates/Choices & Vote Totals
          </h5>
          <div
            class="sc-bxivhb fbVQhV"
          >
            Enter the name of each candidate choice that appears on the ballot for this contest.
          </div>
          <div
            class="sc-iwsKbI lkODvP"
          >
            <div
              class="sc-gZMcBi cKoNuO"
            >
              <label
                class="bp3-label sc-VigVT hUBjjB"
              >
                Name of Candidate/Choice 
                1
                <div
                  class="sc-gqjmRU crDldu sc-ifAKCX eNyQfb"
                >
                  <div
                    class="bp3-input-group sc-EHOje bzcNaj"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[0].name"
                      style="padding-right: 10px;"
                      value="Choice One"
                    />
                  </div>
                </div>
              </label>
              <label
                class="bp3-label sc-VigVT hUBjjB"
              >
                Votes for Candidate/Choice 
                1
                <div
                  class="sc-gqjmRU crDldu sc-ifAKCX eNyQfb"
                >
                  <div
                    class="bp3-input-group sc-EHOje bzcNaj"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[0].numVotes"
                      style="padding-right: 10px;"
                      value="10"
                    />
                  </div>
                </div>
              </label>
            </div>
            <div
              class="sc-gZMcBi cKoNuO"
            >
              <label
                class="bp3-label sc-VigVT hUBjjB"
              >
                Name of Candidate/Choice 
                2
                <div
                  class="sc-gqjmRU crDldu sc-ifAKCX eNyQfb"
                >
                  <div
                    class="bp3-input-group sc-EHOje bzcNaj"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[1].name"
                      style="padding-right: 10px;"
                      value="Choice Two"
                    />
                  </div>
                </div>
              </label>
              <label
                class="bp3-label sc-VigVT hUBjjB"
              >
                Votes for Candidate/Choice 
                2
                <div
                  class="sc-gqjmRU crDldu sc-ifAKCX eNyQfb"
                >
                  <div
                    class="bp3-input-group sc-EHOje bzcNaj"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[1].numVotes"
                      style="padding-right: 10px;"
                      value="20"
                    />
                  </div>
                </div>
              </label>
            </div>
            <p
              class="sc-jTzLTM DJcIy"
            >
              Add a new candidate/choice
            </p>
          </div>
        </div>
        <div
          class="sc-htpNat hKxttc"
        >
          <h5
            class="bp3-heading"
          >
            Total Ballots Cast
          </h5>
          <div
            class="sc-bxivhb fbVQhV"
          >
            Enter the overall number of ballot cards cast in jurisdictions containing this contest.
          </div>
          <label
            for="contests[0].totalBallotsCast"
          >
            Total Ballots for Contest
             
            
            <div
              class="sc-ifAKCX eNyQfb"
            >
              <div
                class="bp3-input-group sc-EHOje bzcNaj"
              >
                <input
                  class="bp3-input"
                  id="contests[0].totalBallotsCast"
                  name="contests[0].totalBallotsCast"
                  style="padding-right: 10px;"
                  value="30"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="sc-htpNat hKxttc"
        >
          <h5
            class="bp3-heading"
          >
            Contest Universe
          </h5>
          <div
            class="sc-bxivhb fbVQhV"
          >
            Select the jurisdictions where this contest appeared on the ballot.
          </div>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button sc-kAzzGY icCzNQ"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Select Jurisdictions
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
      <div
        class="sc-fjdhpX ljTFuz"
      >
        <button
          class="bp3-button sc-kAzzGY icCzNQ"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Add another 
            targeted
             
            contest
          </span>
        </button>
      </div>
    </div>
    <div
      class="sc-fjdhpX ljTFuz"
    >
      <button
        class="bp3-button sc-kAzzGY icCzNQ"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          Back
        </span>
      </button>
      <button
        class="bp3-button bp3-intent-primary sc-kAzzGY icCzNQ"
        type="submit"
      >
        <span
          class="bp3-button-text"
        >
          Save & Next
        </span>
      </button>
    </div>
  </form>
</div>
`;
